fixed spacing for mobile

--- a/Time_Checker/flask_imp/static/style.css
+++ b/Time_Checker/flask_imp/static/style.css
@@ -121,8 +121,8 @@ button {
     box-shadow: 4px 4px 25px #151414;
     margin-top: 100px;
     margin-bottom: 50px;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-left: 17%;
+    margin-right: 17%;
     padding-bottom: 70px;
     transition: 0.5s;
     border-radius: 10px;
